fix(header): improve navbar scroll visibility logic

--- a/src/common/header/header.css
+++ b/src/common/header/header.css
@@ -1,6 +1,7 @@
 .app-header {
-  position: relative;
+  position: fixed;
   top: 0;
+  transition: transform 0.25s ease-in-out;
   right: 0;
   left: 0;
   z-index: 10;
@@ -14,6 +15,15 @@
   padding: 0 1rem 0 0.6rem;
 }
 
+.nav-visible {
+  transform: translateY(0);
+}
+
+.nav-hidden {
+  transform: translateY(-100%);
+}
+
+
 @media screen and (max-width: 768px) {
   .app-header {
     padding: 0 1rem 0 0.2rem;
@@ -21,7 +31,7 @@
 }
 
 .app-header-home {
-  position: sticky;
+  /* position: sticky; */
 }
 
 .app-header-home.app-header-home--promo {
